--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-contador></app-contador>
+<!-- <app-contador></app-contador> -->
 <!-- <app-heroe></app-heroe> -->
 <!-- <app-listado></app-listado> -->
+<dbz-main-page></dbz-main-page>
