--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="col">
        <app-agregar 
-        [personajes]="personajes"
         [nuevo]="nuevo"
+        (onNuevoPersonaje)="agregarNuevoPersonaje( $event )"
        ></app-agregar>
     </div>
 </div>
